# notemill-worker

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/: release-please-config.json
.github/workflows/: docker.yml  gitleaks.yml  release-please.yml
assets/: models_catalog.toml
config/: config.example.yaml  models.toml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  pipeline.rs  state.rs
src/commands/: couchdb.rs  decode.rs  mod.rs  models.rs  resolve.rs  run_file.rs  run_queue.rs
src/commands/admin/: couchdb.rs  mod.rs  queue.rs
src/commands/resolve/: tests.rs
src/commands/run/: file.rs  mod.rs  queue.rs
src/commands/run/queue/: tests.rs
src/config/: tests.rs
src/decode/: ffmpeg.rs  mod.rs
src/engine/: mod.rs
src/input/: file.rs  mod.rs
src/input/queue/: blob.rs  bucket.rs  job.rs  mod.rs  processed.rs  tests.rs  transport.rs
src/input/queue/backends/: fs.rs  mod.rs  sqlite.rs
src/input/queue/backends/fs/: tests.rs
src/input/queue/backends/sqlite/: tests.rs
src/input/queue/bucket/: tests.rs
src/input/queue/job/: tests.rs
src/input/queue/processed/: tests.rs
src/models/: catalog.rs  download.rs  hash.rs  manager.rs  mod.rs  registry.rs
src/output/: concat.rs  couchdb.rs  file.rs  mod.rs  stdout.rs
src/output/concat/: tests.rs
src/output/couchdb/: tests.rs
src/output/frontmatter/: mod.rs
src/pipeline/: join.rs  tests.rs
src/preprocess/: chunker.rs  deafness.rs  mod.rs  vad.rs
src/preprocess/chunker/: tests.rs
src/preprocess/deafness/: tests.rs
src/preprocess/vad/: tests.rs
tests/: decode_test.rs
