[package]
name = "notemill-worker"
version = "0.2.0"
edition = "2021"
description = "CLI transcription tool over transcribe-rs (Whisper / Parakeet / GigaAM, GGUF, CPU)"
license = "MIT"
[features]
# Default: model download is on (lightweight, no native build deps).
# Heavy native modules (engine, decode) stay opt-in until implemented.
default = ["download"]
engine-transcribe = ["dep:transcribe-rs", "dep:ort"]
decode-ffmpeg = ["dep:ffmpeg-next"]
download = ["dep:reqwest", "dep:futures-util", "dep:indicatif", "dep:tar", "dep:flate2"]
full = ["engine-transcribe", "decode-ffmpeg", "download"]

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
sha2 = "0.11"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "sync", "signal"] }
rusqlite = { version = "0.40", features = ["bundled"] }
ureq = { version = "3", features = ["json"] }
base64 = "0.22"
serde_yaml_ng = "0.10"
twox-hash = "2"
mime_guess = { version = "2", default-features = false, features = ["rev-mappings"] }

# Engine (handy uses the same crate; CPU path on Linux).
transcribe-rs = { version = "0.3.8", features = ["whisper-cpp", "onnx"], optional = true }
# ORT bindings used directly for silero-vad inference. Version pinned to match
# what transcribe-rs resolves -- two ort versions in one binary would break ABI.
ort = { version = "2.0.0-rc.12", optional = true }

# Audio decoding via ffmpeg (libav* linked at build time; vendored in Docker).
ffmpeg-next = { version = "7", optional = true }

# Model downloads.
reqwest = { version = "0.13", features = ["stream", "rustls"], default-features = false, optional = true }
futures-util = { version = "0.3", optional = true }
indicatif = { version = "0.18", optional = true }
tar = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }
chrono = { version = "0.4.44", default-features = false, features = ["std", "serde"] }

[profile.release]
lto = true
codegen-units = 1
